2009-05-19  Ingo Renner  <ingo@typo3.org>

	* Follow up to #8561: Checkboxes and labels are aligned badly if in one line (credits Susanne Moog)

2009-05-19  Benjamin Mack  <benni@typo3.org>

	* Fixed #11087 and #6372: TCEForm does not replace the existing element if adding a new element to a field with maxitems=1

2009-05-19  Francois Suter  <francois@typo3.org>

	* Clean up #11118: Reduce memory usage of db_list_extra

2009-05-18  Sebastian Kurfürst <sebastian@typo3.org>

	* New Feature #1110: Added Extbase and Fluid to System Extensions via svn:externals.

2009-05-18  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #8701: Bug: options.moduleMenuCollapsable = 0 doesn't have any effect

2009-05-18  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #11094: CSC: maxWInText setting was being ignored (since #10320).

2009-05-18  Benjamin Mack  <benni@typo3.org>

	* Feature #10639: Integration of the Mass File Uploader (based on SWFUpload and Ext JS)
	* Fixed bug #11111 / Follow-up to #10892: Root item cannot be collapsed in pagetree (Thanks to Andreas Wolf)
	* Fixed bug #11112 / Follow-up to #10892: Collapsing nodes in pagetree produces multiple items with same id (Thanks to Andreas Wolf)

2009-05-16  Francois Suter  <francois@typo3.org>

	* Follow-up to #9994: an unclosed bracket caused a parse error in t3lib_htmlmail

2009-05-16  Karsten Dambekalns  <karsten@typo3.org>

	* Fixed bug #9994: ereg* is deprecated in PHP 5.3 alpha3
	* Fixed bug #11099: DB check breaks with MySQL in ANSI mode due to double quotes

2009-05-16  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10165: FlexForms: wrong mm-relations after copy and localize (thanks to Peter Kuehn)

2009-05-15  Christian Jul Jensen  <julle@typo3.org>

	* Fixed bug #11098: Enables CC and BCC in t3lib_htmlmail

2009-05-14  Benjamin Mack  <benni@typo3.org>
